# writeups

./: README.md
2017/: README.md
2017/beacon/: Dockerfile  KEEP-SETUP-SECRET  beacon-characteristic.js  beacon-service.js  main-timeslot.js  main.js
2017/blackalps/: infos.txt
2017/cassette/: .gitignore  dumpProg.py  solution.md  text.md
2017/home-alarm/: AndroidManifest.xml  BadLoginException.smali.hack  Makefile  README.md  ant.properties  build.xml  how.md  ph0wn.ks  proguard-project.txt
2017/invaders/: SOLUTION  link-video  text.md
2017/rework/: infos.txt
2017/toothbrushes-are-crazy/: KEEP-SECRET
2018/al_berry/: flags.txt
2018/amazfit/: FLAG  setup.md
2018/blackalps/: FLAG1  FLAG2  challs.md
2018/chromecast/: flag.txt  ports  title.txt
2018/ev3robot/: FLAGS  axelle.notes
2018/exitonly/: .gitignore  desc.md
2018/flag_digger/: description.md
2018/glucose/: Dockerfile  FLAG  Makefile  mosquitto.acl  mosquitto.conf  mosquitto.conf.default  mosquitto.pwd  mqtt-admin.py  mqtt-info.py  mqtt-superadmin.py  supervisord.conf
2018/ledgeduino/: FLAG
2018/lora/: FLAG.md
2018/pacman/: FLAG.1  FLAG.2  notes-ax.md
2018/plot/: FLAG
2018/powerplay/: FLAG
2018/savefactory/: Dockerfile  FLAG.savethefactory  FLAG.trackthehacker  Makefile  add_player.sh  challenger.py  client_example.py  (+3 more)
2019/: README.md
2021/: README.md
2024/: README.md
2024/pico-pcb/loader/: CMakeLists.txt  challenge.h  firmware.0.15.uf2  loader.c
2024/pico-pcb/src/stage2/standalone-src/: CMakeLists.txt  flag.c  substitution.py  xor.py
medfusion/: README.md
(+1897 files in other folders)
